<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    tools:context=".Game">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/menu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/checked_stroke"
            android:gravity="center"
            android:padding="4dp"
            android:text="Games Of Math"
            android:textColor="@color/checked"
            app:autoSizeTextType="uniform" />


    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/menu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="32dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo">


        <TextView
            android:id="@+id/menu_arcade"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/text1_stroke"
            android:gravity="center"
            android:onClick="goArcade"
            android:padding="8dp"
            android:text="@string/fast_calc"
            android:textColor="@color/base"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@id/menu_easy_calc"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/menu_easy_calc"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/text1_stroke"
            android:gravity="center"
            android:onClick="goEasy"
            android:padding="8dp"
            android:text="@string/easy_calc"
            android:textColor="@color/base"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@id/menu_heavy_calc"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/menu_arcade" />

        <TextView
            android:id="@+id/menu_heavy_calc"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/text1_stroke"
            android:gravity="center"
            android:onClick="goHeavy"
            android:padding="8dp"
            android:text="@string/heavy_calc"
            android:textColor="@color/base"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@id/menu_practice"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/menu_easy_calc" />

        <TextView
            android:id="@+id/menu_practice"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/text1_stroke"
            android:gravity="center"
            android:onClick="goPractice"
            android:padding="8dp"
            android:text="@string/practice"
            android:textColor="@color/base"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/menu_heavy_calc" />


    </android.support.constraint.ConstraintLayout>


    <RelativeLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/ad_view_wrapper"
        app:layout_constraintTop_toBottomOf="@id/menu">

        <TextView
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/bar_stroke"
            android:gravity="center"
            android:onClick="goSettings"
            android:padding="12dp"
            android:text="@string/settings"
            android:textColor="@color/base"
            app:autoSizeTextType="uniform" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/bar_stroke"
            android:gravity="center"
            android:onClick="goAbout"
            android:padding="12dp"
            android:text="@string/about"
            android:textColor="@color/base"
            app:autoSizeTextType="uniform" />

    </RelativeLayout>

    <RelativeLayout
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ad_view_wrapper"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintTop_toBottomOf="@id/bottom_bar">

        <com.google.android.gms.ads.AdView

            android:id="@+id/add_view_bottom_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/AD_MOB_MATH_BOTTOM" />

    </RelativeLayout>


    <include layout="@layout/game_settings" />

    <include layout="@layout/about" />


</android.support.constraint.ConstraintLayout>